Manage Shift Page rework finished. - Timline and shift list use same GET requests to get week of shifts based off timestamps - Shift list readability is improved - Navigating  though previous/next weeks controlled by same arrows - Bugs fixed that allowed for shifts to be in future.

--- a/time_system/clocker/static/css/manageShifts.css
+++ b/time_system/clocker/static/css/manageShifts.css
@@ -27,6 +27,14 @@ input.icon-input-hide {
     position: static;
 }
 
+#next-week-button {
+    user-select: none;
+}
+
+#prev-week-button {
+    user-select: none;
+}
+
 #timeline-label {
     text-align: center;
     user-select: none;
